# ShaderPreview

./: .gitignore  CMakeLists.txt  Cargo.toml  NOTICE  Readme.md  vcpkg.json
shader_preview/: Cargo.toml
shader_preview/src/: error.rs  fragment_shader.glsl  lib.rs  main.rs  run.rs  vertex_shader.glsl  window.rs
shader_preview/src/run/: mesh.rs  shader_program.rs
shaders/: compute.hlsl  pixel.hlsl  vertex.hlsl
src/: main.cpp
vatnar_linalg/: Cargo.toml
vatnar_linalg/src/: lib.rs  matrix.rs  point.rs  scalar.rs  vector.rs
vatnar_linalg/src/matrix/: macros.rs  matrix_solve.rs  matrix_trait_impl.rs  matrix_view.rs  solve.rs  trait_impl.rs
vatnar_linalg/src/matrix/matrix_solve/: row.rs
vatnar_linalg/src/matrix/solve/: row.rs
vatnar_linalg/src/point/: point2.rs
vatnar_linalg/src/point/point2/: trait_impl.rs
vatnar_linalg/src/vector/: vector2.rs
vatnar_linalg/src/vector/vector2/: trait_impl.rs
